--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     </head>
     <body>
         cuchuflete palabra prueba buu
+        <table>
+            <tr>
+                <td><strong>Nombre</strong></td>
+            </tr>
+        </table>
     </body>
 </html>
