--- a/index.html
+++ b/index.html
@@ -5,10 +5,32 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        cuchuflete palabra prueba buu
+        Pacientes del doctor...
         <table>
             <tr>
                 <td><strong>Nombre</strong></td>
+                <td><strong>Afiliado</strong></td>
+                <td><strong>Fecha</strong></td>
+                <td><strong>Motivo</strong></td>
+
+            </tr>
+            <tr>
+                <td>Emiliano Piñeiro</td>
+                <td>865767321</td>
+                <td>12/01/22</td>
+                <td>Resonancia</td>
+            </tr>
+            <tr>
+                <td>Francisco Lanciotti</td>
+                <td>146995789</td>
+                <td>25/01/22</td>
+                <td>Tomografia</td>
+            </tr>
+            <tr>
+                <td>Florencia Peña</td>
+                <td>6967887324</td>
+                <td>08/01/22</td>
+                <td>Mamografia</td>
             </tr>
         </table>
     </body>
