--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 <td><strong>Afiliado</strong></td>
                 <td><strong>Fecha</strong></td>
                 <td><strong>Motivo</strong></td>
+                <td>Valor practica</td>
 
             </tr>
             <tr>
@@ -19,18 +20,21 @@
                 <td>865767321</td>
                 <td>12/01/22</td>
                 <td>Resonancia</td>
+                <td>$750</td>
             </tr>
             <tr>
                 <td>Francisco Lanciotti</td>
                 <td>146995789</td>
                 <td>25/01/22</td>
                 <td>Tomografia</td>
+                <td>$900</td>
             </tr>
             <tr>
                 <td>Florencia Peña</td>
                 <td>6967887324</td>
                 <td>08/01/22</td>
                 <td>Mamografia</td>
+                <td>$1010</td>
             </tr>
         </table>
     </body>
