--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>pagina 1 medicos</title>
+            <title>pagina 1 medicos</title>
         <meta charset="UTF-8">
+        <script src="main.js"></script>
     </head>
     <body>
         Pacientes del doctor...
