--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
 
             </tr>
             <tr>
-                <td>Emiliano Piñeiro</td>
+                <td>Gaston Zarate</td>
                 <td>865767321</td>
                 <td>12/01/22</td>
                 <td>Resonancia</td>
                 <td>$750</td>
             </tr>
             <tr>
-                <td>Francisco Lanciotti</td>
+                <td>Micaela Diaz</td>
                 <td>146995789</td>
                 <td>25/01/22</td>
                 <td>Tomografia</td>
                 <td>$900</td>
             </tr>
             <tr>
-                <td>Florencia Peña</td>
+                <td>Florencia Sosa</td>
                 <td>6967887324</td>
                 <td>08/01/22</td>
                 <td>Mamografia</td>
